2002-03-22  Havoc Pennington  <hp@pobox.com>

	* libgnome/gnome-program.c
	(gnome_program_get_human_readable_name): fall back to
	g_get_prgname() if human readable name is not set

2002-03-20  Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-help.c: (locate_help_file): add a missing '/' when
	constructing the help file path.

2002-03-19  Mikael Hallendal  <micke@codefactory.se>

	* schemas/desktop_gnome_url_handlers.schemas: set the default url
          handlers in the schema file instead of in the code.

	* libgnome/gnome-url.c: 
	(gnome_url_default_handler): removed, left over from gnome-config.
	(gnome_url_show): get the default handler from gconf every time,
	  #71632

2002-03-18 John Fleck <jfleck@inkstain.net>

	* configure.in, help-converters/docbook/Makefile.am
	patch from Glynn Foster to speed up docbook converter
	by pkg-config-ing converter makefile so it only links
	against the libraries it needs

2002-03-18  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.113.0

2002-03-17  Havoc Pennington  <hp@pobox.com>

	* libgnome/gnome-program.c (gnome_program_locate_file): handle
	absolute paths

2002-03-14  Richard Hestilow  <hestilow@ximian.com>

	* schemas/desktop_gnome_applications_browser.schemas:
	Change to new schema.

2002-03-13  Michael Meeks  <michael@ximian.com>

	* libgnome/gnome-program.c
	(accessibility_invoke): move bonobo bits to atk-bridge
	so the GTK_MODULES approach also works well, sigh.

2002-03-13  Michael Meeks  <michael@ximian.com>

	* libgnome/gnome-program.c
	(find_accessibility_module): use gtk-2.0/modules
	(accessibility_invoke): only do a11y if we're a GUI
	app even if it's enabled, and don't do it for bonobo
	components - we go via their frames.

2002-03-13  Michael Meeks  <michael@ximian.com>

	* monikers/bonobo-config-bag.c
	(impl_Bonobo_PropertyBag_getDefault),
	(impl_Bonobo_PropertyBag_getValue),
	(impl_Bonobo_PropertyBag_getType): fix warnings.

	* monikers/bonobo-moniker-config.c: ditto.
